--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="splashBackground" type="color">#2D9CDB2D9CDBFF00000000</item>
+    <item name="black" type="color">#000000</item>
 </resources>
