--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -6,5 +6,6 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
         <!-- <item name="android:windowBackground">@drawable/launch_screen_bitmap</item> -->
+        <item name="android:textColor">@color/black</item>
     </style>
 </resources>
